--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "review-your-rent",
   "version": "1.0.0",
   "description": "Review private student accommodation website",
-  "main": "index.js",
+  "main": "public/index.html",
   "dependencies": {
     "firebase": "^8.0.1"
   },
   "devDependencies": {},
   "scripts": {
-
+    "deploy": "firebase deploy --only hosting,functions"
   },
   "author": "Brian Evans",
   "license": "ISC"
