--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,21 +4,30 @@
   "description": "the client side source code",
   "main": "index.js",
   "scripts": {
-    "build": "tsc -p .",
-    "watch": "tsc -p . -w"
+    "build": "webpack",
+    "watch": "webpack -w",
+    "prestart": "npm run build",
+    "deploy": "firebase deploy --only hosting",
+    "start": "firebase emulators:start --only hosting"
   },
   "keywords": [],
   "author": "Brian Evans",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "reactstrap": "^8.7.1",
+    "style-loader": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "babel": "^6.23.0",
+    "css-loader": "^5.0.1",
+    "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
-    "webpack": "^5.4.0"
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
   }
 }
