--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "description": "Review private student accommodation website",
   "main": "public/index.html",
   "dependencies": {
-    "firebase": "^8.0.1"
+    "firebase": "^8.0.1",
+    "reactstrap": "^8.7.1"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "serve": "^11.3.2",
+    "ts-loader": "^8.0.11",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0"
+  },
   "scripts": {
-    "deploy": "firebase deploy --only hosting,functions"
+    "deploy": "firebase deploy --only hosting,functions",
+    "start": "firebase emulators:start  --only hosting,functions"
   },
   "author": "Brian Evans",
   "license": "ISC"
