--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "watch": "webpack -w",
     "prestart": "npm run build",
     "deploy": "firebase deploy --only hosting",
-    "start": "firebase emulators:start --only hosting"
+    "start": "firebase emulators:start --only hosting",
+    "serve": "firebase serve"
   },
   "keywords": [],
   "author": "Brian Evans",
@@ -25,6 +26,7 @@
     "@types/react-dom": "^16.9.9",
     "babel": "^6.23.0",
     "css-loader": "^5.0.1",
+    "mini-css-extract-plugin": "^1.3.1",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
