--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "none",
     // Set React as the JSX factory
     "jsx": "react",
-    // Target ES6 for more modern browsers
+    // Target es6
     "target": "es6",
     // Include typings from built-in lib declarations
     "lib": [
