Started changing how resources load
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/firebase.json
+++ b/firebase.json
@@ -14,8 +14,16 @@
     ],
     "rewrites": [
       {
+        "source": "/profile",
+        "destination": "/static-pages/profile.html"
+      },
+      {
+        "source": "/property/*",
+        "destination": "/static-pages/property.html"
+      },
+      {
         "source": "**",
-        "destination": "/index.html"
+        "destination": "/static-pages/index.html"
       }
     ]
   }
