--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
   "name": "frontend",
+  "sideEffects": false,
   "version": "1.0.0",
   "description": "the client side source code",
-  "main": "index.js",
+  "main": "scripts/index.js",
   "scripts": {
     "build": "webpack",
     "watch": "webpack -w",
@@ -17,8 +18,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "style-loader": "^2.0.0"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.56",
@@ -26,6 +26,7 @@
     "babel": "^6.23.0",
     "css-loader": "^5.0.1",
     "mini-css-extract-plugin": "^1.3.1",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.11",
     "typescript": "^4.0.5",
     "webpack": "^5.4.0",
