Added Google Maps place autocompletion
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,6 +14,9 @@
     ],
     // Include module source maps for debugging
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": [
+      "googlemaps"
+    ]
   }
 }
