--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,12 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "^5.2.0",
+    "util": "^0.12.3"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.40.3",
+    "@types/node": "^14.14.9",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "babel": "^6.23.0",
