--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,7 @@
   "dependencies": {
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-router-dom": "^5.2.0",
-    "util": "^0.12.3"
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "@types/googlemaps": "^3.40.3",
