--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,12 +8,15 @@
     "target": "es6",
     // Include typings from built-in lib declarations
     "lib": [
-      "es2015",
+      "es7",
       "dom",
       "dom.iterable"
     ],
     // Include module source maps for debugging
     "sourceMap": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "types": [
+      "googlemaps"
+    ]
   }
 }
