--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
+    "@types/googlemaps": "^3.40.3",
+    "@types/node": "^14.14.9",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "babel": "^6.23.0",
