--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
   "author": "Brian Evans",
   "license": "ISC",
   "dependencies": {
+    "@material-ui/core": "^4.11.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
