--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.1",
+    "@material-ui/icons": "^4.9.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0"
