💾 Server side rendering of index.html
Signed-off-by: Brian Evans <ebrian101@gmail.com>

--- a/firebase.json
+++ b/firebase.json
@@ -26,6 +26,10 @@
         "destination": "/static-pages/profile.html"
       },
       {
+        "source": "/render",
+        "destination": "/static-pages/render.html"
+      },
+      {
         "source": "**",
         "destination": "/static-pages/other.html"
       }
